--- a/index_index.html
+++ b/index_index.html
@@ -34,6 +34,7 @@
         <p>熟悉 HTML(5)/CSS(3)/JS/AJAX/JSON/jQuery 库等前端开发技术；</p>
         <p>熟悉使用 Chrome 开发者工具、FireBug 等 Web 常用开发工具；</p>
         <p>熟悉页面架构和布局，了解  W3C  标准，能很好的解决浏览器之间的兼容性；</p>
+		<p>了解后台开发语言PHP，使用MVC模式开发</p>
         <p>了解Angular.js前端开发框架</p>
         <p>了解Gulp项目构建工具</p>
         <p>具备团队协作、项目开发经验，懂得使用团队协作工具 svn、git、tower等；</p>
@@ -87,8 +88,10 @@
         <p>策划、筹备、宣传 <span style="color:blue;">300</span>多参赛者英文诗歌朗诵大赛</p>
         <p>2013.10 ~ 2013.11  第  114  届广交会地铁志愿者</p>
         <p>2012.09 ~  至今    班级班干部(已连续 <span style="color:blue;">3 年</span>担任)</p>
-        <p>2013.09 ~  至今  广州创易谷网络科技有限公司  <span style="color:blue;">前端开发人员&推广专员&行政助理</span></p>
+        <p>2013.09 ~  2105.05  广州创易谷网络科技有限公司  <span style="color:blue;">前端开发人员&推广专员&行政助理</span></p>
         <p>创易谷创业团队，已成为<span style="color:blue;">国家级创业项目</span>，现已注册公司，主要负责项目开发，宣传团队，成员招募、培训与管理，财务管理及活动安排</p>
+		<p>2015.07 ~ 至今 广州4399信息科技有限公司 <span style="color:blue;">web开发实习生</span></p>
+		<p>作为web开发实习生参与公司页游官网制作，公司内部系统平台开发等</p>
     </div>
     <div id="prize" class="step" data-x="3200" data-y="300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
         <h6>获得奖项</h6>
