--- a/index_index.html
+++ b/index_index.html
@@ -90,7 +90,7 @@
         <p>2012.09 ~  至今    班级班干部(已连续 <span style="color:blue;">3 年</span>担任)</p>
         <p>2013.09 ~  2105.05  广州创易谷网络科技有限公司  <span style="color:blue;">前端开发人员&推广专员&行政助理</span></p>
         <p>创易谷创业团队，已成为<span style="color:blue;">国家级创业项目</span>，现已注册公司，主要负责项目开发，宣传团队，成员招募、培训与管理，财务管理及活动安排</p>
-		<p>2015.07 ~ 至今 广州4399信息科技有限公司 （4399游戏大全）<span style="color:blue;">WEB开发实习生</span></p>
+		<p>2015.07 ~ 至今 广州四三九九信息科技有限公司 （4399游戏大全）<span style="color:blue;">WEB开发实习生</span></p>
 		<p>负责页游官网制作及维护，游戏活动页面前端制作及后台数据库、接口编写，使用MVC模式参与研发app接口开发等</p>
     </div>
     <div id="prize" class="step" data-x="3200" data-y="300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
